# teraflowsdn

./: .gitignore  configure_nodes.sh  wg-tun-conf  wireguard_tunnel.md  wireguard_tunnel.sh
.obsidian/: workspace.json
ansible-cluster-and-deploy/: Vagrantfile  inventory.yml  playbook.yml  proxmox_inventory.yml  run.sh  run_full_vagrant.sh  run_proxmox.sh  run_vagrant.sh  ssh_key.pem  ssh_key.pub  vagrant_inventory.yml
containerlab/: commands.txt  run.sh  srl.cli  srl1.cli  srl2.cli  tfs-scenario.clab.yml  wg-private-key  wireguard_tunnel.sh
deploy-tfs-cluster/: Vagrantfile  microk8s-tfs-install.sh  (+2 more)
deploy/tfslauncher/: go.mod  main.go  pyproject.toml  tfs-config.yaml
deploy/tfslauncher/cmd/: root.go
deploy/tfslauncher/manifests/: automationservice.yaml  cachingservice.yaml  computeservice.yaml  contextservice.yaml  dbscanservingservice.yaml  deviceservice.yaml  dltservice.yaml  interdomainservice.yaml  l3_attackmitigatorservice.yaml  l3_centralizedattackdetectorservice.yaml  l3_distributedattackdetectorservice.yaml  load_generatorservice.yaml  mock_blockchain.yaml  monitoringservice.yaml  nginx_ingress_http.yaml  opticalattackdetectorservice.yaml  opticalattackmanagerservice.yaml  opticalattackmitigatorservice.yaml  pathcompservice.yaml  policyservice.yaml  prometheus.yaml  servicemonitors.yaml  serviceservice.yaml  sliceservice.yaml  teservice.yaml  webuiservice.yaml
deploy/tfslauncher/manifests/cockroachdb/: cluster.yaml  operator.yaml  single-node.yaml
deploy/tfslauncher/manifests/questdb/: manifest.yaml
deploy/tfslauncher/tfslauncher/: main.py
(+58 files in other folders)
