[tool.poetry]
name = "tfslauncher"
version = "0.1.0"
description = "TeraFlowSDN Controller installer and launcher"
authors = ["David Araújo <david2araujo5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tfslauncher = "tfslauncher.main:cli"
